On OpenBSD, gpg-wks-server fails because of the hardcoded path to sendmail.
This is already fixed in master, but not in the 2.2 series.
please cherry-pick 08147f8bbdca40c98c2a094fa48fab15b8339c80 onto STABLE-BRANCH-2-2
On OpenBSD, gpg-wks-server fails because of the hardcoded path to sendmail.
This is already fixed in master, but not in the 2.2 series.
please cherry-pick 08147f8bbdca40c98c2a094fa48fab15b8339c80 onto STABLE-BRANCH-2-2
| rG GnuPG | |||
| rG76d2a02dfe8f wks: Take name of sendmail from configure. | |||